# ChainFlowSuite

./: .gitignore  CHAINFLOW_DESIGNER_EVALUATION.md  CHAINFLOW_FILER_REVIEW_MATERIAL.md  CHAINFLOW_SUITE_TOTAL_MANUAL.md  ChainFlowSearch.spec  ChainFlow_Suite_Scale_Evaluation_2026.md  ChainFlow_Suite_Universal_Manifesto.md  README.md  REFACTORING_PLAN_V21.md  agent-work-log.json  build_v21.bat  build_v21_designer.bat  build_v21_designer_standalone.bat  build_v21_filer.bat  build_v21_filer_standalone.bat  build_v21_image.bat  build_v21_image_standalone.bat  build_v21_pdf.bat  build_v21_pdf_compare.bat  build_v21_pdf_compare_standalone.bat  build_v21_pdf_studio_standalone.bat  build_v21_search.bat  build_v21_search_standalone.bat  build_v21_todo.bat  build_v21_todo_standalone.bat  build_v21_tool.bat  build_v21_tool_standalone.bat  build_v21_writer.bat  build_v21_writer_standalone.bat  build_v22.bat  build_v22_designer.bat  build_v22_designer_standalone.bat  build_v22_filer.bat  build_v22_filer_standalone.bat  build_v22_image.bat  build_v22_image_standalone.bat  build_v22_pdf_compare.bat  build_v22_pdf_compare_standalone.bat  build_v22_pdf_studio_standalone.bat  build_v22_search.bat  (+24 more)
ChainFlowDesigner/: ChainFlowDesigner.spec  README.md  build_designer.bat  canvas.py  commands.py  dtp_editor.py  file_io.py  items.py  layer_panel.py  main.py  panels.py  swatch_panel.py  (+1 more)
ChainFlowFiler_v23_2/native/: Cargo.toml  pyproject.toml
ChainFlowFiler_v23_2/native/src/: lib.rs
ChainFlowSearch_v23/native/: Cargo.toml  pyproject.toml
ChainFlowSearch_v23/native/src/: lib.rs
(+1181 files in other folders)
