[package]
name = "chainflow_core_v23_1"
version = "0.1.0"
edition = "2021"

[lib]
name = "chainflow_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
ignore = "0.4.22"
rayon = "1.10.0"
num_cpus = "1.16.0"
unicode-normalization = "0.1.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
